[tool.poetry]
name = "mediarouter"
version = "0.0.2"
description = "This library provides functions for routing media such as images and videos via FastAPI."
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anyio = ">=3.6.1"
attrs = ">=22.1.0"
certifi = ">=2022.9.24"
click = ">=8.1.3"
exceptiongroup = ">=1.0.4"
fastapi = ">=0.85.0"
h11 = ">=0.13.0"
httpcore = ">=0.16.2"
httpx = ">=0.23.1"
idna = ">=3.4"
iniconfig = ">=1.1.1"
numpy = ">=1.19.1"
opencv-python = ">=4.6.0.66"
packaging = ">=21.3"
pillow = ">=9.2.0"
pluggy = ">=1.0.0"
pydantic = ">=1.10.2"
pyparsing = ">=3.0.9"
pytest = ">=7.2.0"
python-multipart = ">=0.0.5"
rfc3986 = ">=1.5.0"
six = ">=1.16.0"
sniffio = ">=1.3.0"
starlette = ">=0.20.0"
tomli = ">=2.0.1"
typing-extensions = ">=4.2.0"
uvicorn = ">=0.20.0"
pyproject-toml = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
